--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
 			<artifactId>spring-security-crypto</artifactId>
 			<version>5.5.8</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.12.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
