--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/neptune
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://sql.freedb.tech:3306/freedb_neptune
+spring.datasource.username=freedb_Neptune
+spring.datasource.password=uJvhz$8%etBjuVu
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
